--- a/SRSDriver/Resources/Storyboards/Profile.storyboard
+++ b/SRSDriver/Resources/Storyboards/Profile.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,9 +20,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wmd-qe-Nhe">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="wmd-qe-Nhe">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="rQc-GK-HeV">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="131.5"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -44,7 +44,7 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProfileHeadetCell" rowHeight="64" id="PvO-3c-Hhr" customClass="ProfileCell" customModule="DMSDriver" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="159.5" width="375" height="64"/>
+                                        <rect key="frame" x="0.0" y="187" width="375" height="64"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PvO-3c-Hhr" id="zLL-cM-co5">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
@@ -100,7 +100,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProfileEditCell" rowHeight="77" id="s8z-6Q-DOq" customClass="ProfileCell" customModule="DMSDriver" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="223.5" width="375" height="77"/>
+                                        <rect key="frame" x="0.0" y="251" width="375" height="77"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s8z-6Q-DOq" id="jGL-lf-WDR">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
@@ -168,7 +168,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProfileChagePassCell" rowHeight="64" id="3RR-dr-gaj" customClass="ProfileCell" customModule="DMSDriver" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="300.5" width="375" height="64"/>
+                                        <rect key="frame" x="0.0" y="328" width="375" height="64"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3RR-dr-gaj" id="pq7-AZ-Nmg">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
@@ -224,14 +224,15 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="y9r-Xv-1bt" firstAttribute="trailing" secondItem="wmd-qe-Nhe" secondAttribute="trailing" id="Bxd-o3-lZ6"/>
-                            <constraint firstItem="y9r-Xv-1bt" firstAttribute="bottom" secondItem="wmd-qe-Nhe" secondAttribute="bottom" id="QcZ-Bf-f92"/>
-                            <constraint firstItem="wmd-qe-Nhe" firstAttribute="leading" secondItem="y9r-Xv-1bt" secondAttribute="leading" id="UM1-sN-sdy"/>
-                            <constraint firstItem="wmd-qe-Nhe" firstAttribute="top" secondItem="y9r-Xv-1bt" secondAttribute="top" id="cYe-mB-mWD"/>
+                            <constraint firstItem="wmd-qe-Nhe" firstAttribute="leading" secondItem="y9r-Xv-1bt" secondAttribute="leading" id="GUz-dm-VK1"/>
+                            <constraint firstItem="wmd-qe-Nhe" firstAttribute="top" secondItem="Ta6-sO-5q1" secondAttribute="top" id="np0-ky-uWY"/>
+                            <constraint firstItem="wmd-qe-Nhe" firstAttribute="trailing" secondItem="y9r-Xv-1bt" secondAttribute="trailing" id="tuc-mM-AuG"/>
+                            <constraint firstItem="wmd-qe-Nhe" firstAttribute="bottom" secondItem="y9r-Xv-1bt" secondAttribute="bottom" id="yDi-gO-FEk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="y9r-Xv-1bt"/>
                     </view>
