--- a/SRSDriver/Resources/Storyboards/Order.storyboard
+++ b/SRSDriver/Resources/Storyboards/Order.storyboard
@@ -434,7 +434,6 @@
                                                             <rect key="frame" x="300" y="31" width="30" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="30" id="PQH-F4-u3D"/>
-                                                                <constraint firstAttribute="width" secondItem="yoT-dT-Gbl" secondAttribute="height" multiplier="1:1" id="WhE-04-hob"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
@@ -587,7 +586,6 @@
                         <outlet property="btnUnable" destination="zhZ-I6-6Kf" id="npq-nk-EJy"/>
                         <outlet property="tableView" destination="Cbz-Qu-Ei1" id="wAy-Xh-kmW"/>
                         <outlet property="updateStatusButton" destination="fbg-gT-bC4" id="pQ1-5r-xV9"/>
-                        <segue destination="9vQ-yW-Ino" kind="show" identifier="showMapView" id="IMh-bp-j7A"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmd-vq-TD7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -666,12 +664,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gyd-Xo-C8g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3774" y="301"/>
+            <point key="canvasLocation" x="3630" y="552"/>
         </scene>
         <!--Order Detail Map View Controller-->
         <scene sceneID="H9N-9m-JN6">
             <objects>
-                <viewController id="9vQ-yW-Ino" customClass="OrderDetailMapViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OrderDetailMapViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9vQ-yW-Ino" customClass="OrderDetailMapViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VLs-dW-I43">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -762,7 +760,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MFL-QQ-6eD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3713" y="-775"/>
+            <point key="canvasLocation" x="3610" y="-159"/>
         </scene>
         <!--Scan Bar Code View Controller-->
         <scene sceneID="nFV-ZI-nS4">
@@ -903,7 +901,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="557-kM-yAc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4486" y="-206"/>
+            <point key="canvasLocation" x="4554" y="-143"/>
         </scene>
         <!--Order Notes View Controller-->
         <scene sceneID="QKY-Sa-X2d">
