--- a/SRSDriver/Resources/Storyboards/Order.storyboard
+++ b/SRSDriver/Resources/Storyboards/Order.storyboard
@@ -354,7 +354,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cbz-Qu-Ei1">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="Q5p-kQ-q1m">
                                     <rect key="frame" x="0.0" y="316" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -395,7 +395,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="zhZ-I6-6Kf" firstAttribute="centerY" secondItem="fbg-gT-bC4" secondAttribute="centerY" id="E9F-Wg-odk"/>
                                         <constraint firstItem="fbg-gT-bC4" firstAttribute="width" secondItem="zhZ-I6-6Kf" secondAttribute="width" id="QqK-td-4Le"/>
@@ -576,7 +576,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3sD-7l-Phb" firstAttribute="bottom" secondItem="Cbz-Qu-Ei1" secondAttribute="bottom" id="Rfr-Ve-QAl"/>
                             <constraint firstItem="Cbz-Qu-Ei1" firstAttribute="trailing" secondItem="3sD-7l-Phb" secondAttribute="trailing" id="YG4-By-vvo"/>
@@ -712,7 +712,7 @@
         <!--Order Detail Map View Controller-->
         <scene sceneID="H9N-9m-JN6">
             <objects>
-                <viewController storyboardIdentifier="OrderDetailMapViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9vQ-yW-Ino" customClass="OrderDetailMapViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OrderDetailMapViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9vQ-yW-Ino" customClass="OrderDetailMapViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VLs-dW-I43">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
