--- a/SRSDriver/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/SRSDriver/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
         <!--Slide MenuVC-->
         <scene sceneID="IQ7-XU-wk3">
             <objects>
-                <viewController storyboardIdentifier="SlideMenuVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Nml-dY-CI7" customClass="SlideMenuVC" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SlideMenuVC" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Nml-dY-CI7" customClass="SlideMenuVC" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lI2-DP-01x">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
