--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -38,8 +38,8 @@
                                     <action selector="didClickLogin:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="u79-Yh-8ep"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_99Cents" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
-                                <rect key="frame" x="117" y="63" width="141" height="98"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_masof_s" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
+                                <rect key="frame" x="122.5" y="96" width="130" height="65"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xBQ-JA-gRu">
                                 <rect key="frame" x="63.5" y="201" width="248.5" height="60"/>
@@ -148,6 +148,9 @@
                                 <state key="normal" title="Forgot your password?">
                                     <color key="titleColor" red="0.98759037260000004" green="0.13012792419999999" blue="0.128249854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="login_forgot_password"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="tapForgetPasswordButtonAction:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="O1J-p0-bCs"/>
                                 </connections>
@@ -208,6 +211,6 @@
         <image name="check_selected" width="24" height="24"/>
         <image name="ic_login_password" width="18" height="18"/>
         <image name="ic_login_user" width="18" height="18"/>
-        <image name="logo_99Cents" width="141" height="98"/>
+        <image name="logo_masof_s" width="130" height="65"/>
     </resources>
 </document>
